# penpot-desktop

./: .gitignore  AGENTS.md  README.md  bun.lockb  package.json
.github/workflows/: build.yml
scripts/: build-frontend.sh
src/: index.html  settings.html
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/locales/: ar.json  ca.json  de.json  en.json  es.json  fr.json  he.json  it.json  jpn_JP.json  ko.json  nl.json  pl.json  pt_BR.json  ro.json  ru.json  tr.json  ukr_UA.json  zh_CN.json
src-tauri/migrations/: V1__initial_schema.sql  V2__media_storage.sql  V3__font_variants.sql
src-tauri/src/: commands.rs  config.rs  i18n.rs  main.rs  menu.rs  proxy.rs  state.rs  updater.rs  windows.rs
src-tauri/src/backend/: binfile.rs  changes.rs  db.rs  flags.rs  media.rs  mod.rs  model.rs  rpc.rs  store.rs  transit.rs
