[package]
name = "penpot-desktop"
version = "1.0.0"
description = "Penpot Desktop – Standalone Penpot Frontend in Tauri"
authors = ["Stas Haas"]
edition = "2021"
license = "MIT"

[[bin]]
name = "PenpotDesktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }
url = "2"
mime_guess = "2"
percent-encoding = "2"
futures = "0.3"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
hyper = "1"
http = "1"
dirs = "5"
lazy_static = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
bytes = "1"
